--- a/recipes/dish2.html
+++ b/recipes/dish2.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="/index.html"></a>
+
     <h1>Bethany's Frito(R) Pie</h1>
 
     <img src="https://www.allrecipes.com/thmb/aOezVpgOxxvzkJNcLlM6QDdM9cc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/1622714-56f42741c88c4c599f6cbc53dfcbdeff.jpg" alt="food" height="500px" width="500px">
