--- a/recipes/dish1.html
+++ b/recipes/dish1.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+
+    <a href="/index.html"></a>
     <h1>Mexican Casserole</h1>
 
     <img src="https://www.allrecipes.com/thmb/qPkB2zDOt-JHlPdkYqmr--1Gww4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/2147627-mexican-casserole-photo-by-rock_lobster-1d27c844e0c142cca6aa40796767f698.jpg" alt="food" height="500px" width="500px">
