--- a/recipes/salsa.html
+++ b/recipes/salsa.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="/index.html"></a>
+
     <h1>Salsa chicken</h1>
 
     <img src="https://www.allrecipes.com/thmb/aY2sGWQpCKn6Or_yrZMZEvzctNM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/Salsa-Chicken-by-Chad-5d40901985594774b20ee6aa20c65957.jpg" alt="food" height="500px" width="500px">
