--- a/recipes/dish2.html
+++ b/recipes/dish2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/index.html"></a>
+    <a href="/index.html">Home</a>
 
     <h1>Bethany's Frito(R) Pie</h1>
 
