--- a/recipes/salsa.html
+++ b/recipes/salsa.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/index.html"></a>
+    <a href="/index.html">Home</a>
 
     <h1>Salsa chicken</h1>
 
