--- a/recipes/dish1.html
+++ b/recipes/dish1.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css_code/recipes.css">
 </head>
 <body>
 
-    <a href="/index.html">Home</a>
+    <a href="../index.html">Home</a>
     <h1>Mexican Casserole</h1>
 
     <img src="https://www.allrecipes.com/thmb/qPkB2zDOt-JHlPdkYqmr--1Gww4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/2147627-mexican-casserole-photo-by-rock_lobster-1d27c844e0c142cca6aa40796767f698.jpg" alt="food" height="500px" width="500px">
