--- a/recipes/salsa.html
+++ b/recipes/salsa.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css_code/recipes.css">
 </head>
 <body>
-    <a href="/index.html">Home</a>
+    <a href="../index.html">Home</a>
 
     <h1>Salsa chicken</h1>
 
