--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css_code/index.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
 
     <ul>
-        <li><a href="/recipes/dish1.html">Salsa chicken</a></li>
-        <li><a href="/recipes/dish1.html">Mexican Casserole</a></li>
-        <li><a href="/recipes/dish2.html">Bethany's Frito(R) Pie</a></li>
+        <li><a href="/html_code/recipes/salsa.html">Salsa chicken</a></li>
+        <li><a href="/html_code/recipes/dish1.html">Mexican Casserole</a></li>
+        <li><a href="/html_code/recipes/dish2.html">Bethany's Frito(R) Pie</a></li>
     </ul>
 </body>
 </html>
